k8s/playground/eks/nginx-ingress/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-metric-app 
  namespace: demo
spec:
  selector:
    matchLabels:
      app: test-metric-app 
  template:
    metadata:
      labels:
        app: test-metric-app 
    spec:
      containers:
      - image: high10hunter/test-metric-app:latest
        name: test-metric-app 
        ports:
            - name: http
              containerPort: 7070 
            - name: metrics
              containerPort: 8081
        resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
